# 2025_20667765

./: .gitignore  README.md  adder_8h.html  adder_8h_source.html  dir_2da1ba02ad6d6566ea872b36c80284f6.html  dir_9419f6dbe7d2caf8f8d3dc4dbbb195b8.html  dir_9419f6dbe7d2caf8f8d3dc4dbbb195b8.js  dir_ba97f655f15d0ee87ae6da86a6b51af0.html  dir_e7cf6b1a1b46e585974ca00d56751548.html  files.html  files_dup.js  git-cheat-sheet.txt  globals.html  globals_func.html  heet 6 Exercise 7 - Resource file and icons  hi_and_date.cmd  index.html  installer_2include_2adder_8h.html  installer_2include_2adder_8h_source.html  installer__dynamic_2include_2adder_8h_source.html  navtreedata.js  navtreeindex0.js
Worksheet3/: adder.cpp  adder.h  calc.cpp  libadder.lib  libadder_import.exp
Worksheet5/: CMakeLists.txt
Worksheet5/html/: dir_0c9f9313052dc11a48724669c4184cd4.html  dir_0c9f9313052dc11a48724669c4184cd4.js  dir_2b9f5390bb020221f14d5f41aac406bf.html  dir_2b9f5390bb020221f14d5f41aac406bf.js  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_9419f6dbe7d2caf8f8d3dc4dbbb195b8.html  dir_ba97f655f15d0ee87ae6da86a6b51af0.html  dir_e730086837ece2a99422f85c8779d53d.html  dir_e7cf6b1a1b46e585974ca00d56751548.html  dir_e7cf6b1a1b46e585974ca00d56751548.js  globals_func.html  installer_2include_2adder_8h.html  installer_2include_2adder_8h.js  installer__dynamic_2include_2adder_8h_source.html  navtreedata.js
Worksheet5/html/search/: all_0.js
Worksheet5/installer/lib/: maths.lib
Worksheet5/latex/: adder_8h.tex  adder_8h_source.tex  build_2___c_pack___packages_2win64_2_n_s_i_s_2worksheet5-calc-1_80_80-win64_2include_2adder_8h_source.tex  files.tex  installer_2include_2adder_8h.tex  installer_2include_2adder_8h_source.tex  installer__dynamic_2include_2adder_8h_source.tex  refman.tex
Worksheet7/Exercise3/Qtproject/Worksheet6/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
docs/: adder_8h.html  adder_8h_source.html  build_2___c_pack___packages_2win64_2_n_s_i_s_2worksheet5-calc-1_80_80-win64_2include_2adder_8h_source.html  dir_2da1ba02ad6d6566ea872b36c80284f6.html  dir_2da1ba02ad6d6566ea872b36c80284f6.js  dir_4fef79e7177ba769987a8da36c892c5f.js  dir_5c5ea30573c7675a995486f35d80fc23.html  dir_5c5ea30573c7675a995486f35d80fc23.js  dir_9e7926ff2985179beaff26f6dd17ab70.html  dir_b048026938d7a732b9389a92ef8d8a24.html  dir_b048026938d7a732b9389a92ef8d8a24.js  dir_ba97f655f15d0ee87ae6da86a6b51af0.js  dir_caf7bd7b80ca3c72707179c9e9ea8d2b.html  dir_e730086837ece2a99422f85c8779d53d.js  doxygen_crawl.html  files.html  files_dup.js  globals.html  index.html  installer_2include_2adder_8h_source.html  navtreeindex0.js
search/: all_0.js  files_0.js  functions_0.js
untitled/: CMakeLists.txt  (+3 more)
(+45 files in other folders)
